# INFT2503-C-ForProgrammers

./: .gitignore
Exercise 01/: CMakeLists.txt
Exercise 01/a/: main.cpp
Exercise 01/b/: main.cpp
Exercise 02/: CMakeLists.txt
Exercise 02/Task 1/a/: CMakeLists.txt
Exercise 02/Task 6/: main.cpp
Exercise 02/Task5/: main.cpp
Exercise 03/: CMakeLists.txt
Exercise 03/Task 2/: CMakeLists.txt  Circle.cpp
Exercise 03/Task 3/: CMakeLists.txt
Exercise 03/Task 4/: main.cpp
Exercise 03/Task3/: commodity.hpp
Exercise 04/Task2/: CMakeLists.txt
Exercise 05/: main.cpp
Exercise 06/Task 2/: main.cpp
Exercise 07/Task 1/: CMakeLists.txt  fraction.cpp  fraction.hpp  main copy.cpp
Exercise 07/Task 2/: CMakeLists.txt  main.cpp  set.cpp  set.hpp
Exercise 07/Task1/: Teori.txt  main.cpp
Exercise 08/: CMakeLists.txt
Exercise 08/Task1/: main.cpp
Exercise 08/Task2/: main.cpp
Exercise 09/: CMakeLists.txt
Exercise 09/a/: main.cpp
Exercise 09/b/: main.cpp
Exercise 09/c/: main.cpp
Exercise 1/a/eksempel.dSYM/Contents/: Info.plist
Exercise 1/a/eksempel.dSYM/Contents/Resources/DWARF/: eksempel
Exercise 1/b/: CMakeLists.txt  tallfil.txt
Exercise 10/: main.cpp
Exercise 2/Task 1/a/: main.cpp
Exercise 2/Task 1/b/: main.cpp
Exercise 2/Task 2 and 3/: answer.md  main.cpp
Exercise 2/Task 4/: main.cpp
Exercise 3/Task 1/: Circle.cpp
Exercise 3/Task 3/: main.cpp
Exercise 4/Task 1/: main.cpp
Exercise 5/: main.cpp
Exercise 6/Task 2/: CMakeLists.txt
